# homework_kyrs_7

./: .env.sample  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
lms/: admin.py  models.py  paginators.py  serializers.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_initial.py  0003_alter_lesson_course.py
users/: admin.py  models.py  permissions.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: create_moderator_group.py  loaddata_payment.py
users/migrations/: 0001_initial.py
